--- a/app/views/admin/panel/users.html.haml
+++ b/app/views/admin/panel/users.html.haml
@@ -13,9 +13,9 @@
       %th.email-header{'ng-click' => "order.setAttr('email')" }
         .btn.btn-sm.btn-default Email
       %th{'ng-click' => "order.setAttr('best_score')" }
-        .btn.btn-sm.btn-default Najlepszy wynik
+        .btn.btn-sm.btn-default Rekord
       %th{'ng-click' => "order.setAttr('gameplays')" }
-        .btn.btn-sm.btn-default Ilość gier
+        .btn.btn-sm.btn-default Podejścia
       %th{'ng-click' => "order.setAttr('date')" }
         .btn.btn-sm.btn-default Data rejestracji
       %th{'ng-click' => "order.setAttr('birthday_date')" }
