--- a/app/views/static_pages/_info_modal.html.haml
+++ b/app/views/static_pages/_info_modal.html.haml
@@ -15,8 +15,9 @@
         %ul
           %li zaloguj się przez facebooka aby móc zapisać swój wynik
           %li sklep Dobre Ziele regularnie funduje atrakcyjną nagrodę dla czołowego yerbochłona
+          %li aplikacja nie będzie publikować żadnych informacji na twoim profilu
           %li zapisanie się do Mistrzów Siorbania jest jednoznaczne z subskrypcją Siorbslettera
+          %li dzięki niemu będziesz miał dostęp do promocji i konkursów organizowanych przez Dobre Ziele
           %li obiecujemy, że nie będzie spamu i każdej chwili możesz się z niego wypisać
-          %li dzięki temu będziesz miał dostęp do najlepszych promocji, nowości i konkursów organizowanych przez Dobre Ziele
       .modal-footer
         %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Zamknij
