fixed sorting by date

--- a/app/views/admin/panel/statistics.html.haml
+++ b/app/views/admin/panel/statistics.html.haml
@@ -12,7 +12,7 @@
         .btn.btn-sm.btn-default Czas gry
       %th{'ng-click' => "order.setAttr('score')" }
         .btn.btn-sm.btn-default Wynik
-      %th{'ng-click' => "order.setAttr('date')" }
+      %th{'ng-click' => "order.setAttr('unix_date')" }
         .btn.btn-sm.btn-default Data
       %th
   %tbody
