--- a/app/views/admin/panel/users.html.haml
+++ b/app/views/admin/panel/users.html.haml
@@ -16,7 +16,7 @@
         .btn.btn-sm.btn-default Rekord
       %th{'ng-click' => "order.setAttr('gameplays')" }
         .btn.btn-sm.btn-default Podejścia
-      %th{'ng-click' => "order.setAttr('date')" }
+      %th{'ng-click' => "order.setAttr('unix_date')" }
         .btn.btn-sm.btn-default Data rejestracji
       %th
   %tbody
