--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -3,6 +3,7 @@
     %title Siorb - Droga do Rozbudzenia Admin Area
     = stylesheet_link_tag    "admin/application"
     = include_gon
+    %script{src: "http://cdnjs.cloudflare.com/ajax/libs/datejs/1.0/date.min.js" }
     %script{src: "http://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"}
     %script{src: 'http://code.angularjs.org/1.2.15/angular-route.min.js'}
     %script{src: 'http://code.angularjs.org/1.2.15/angular-animate.min.js'}
