--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Siorb - Droga do Rozbudzenia (Yerba Mate)
+    %title Siorb - Droga do Rozbudzenia (Yerba Mate Kraków)
     = include_gon
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
