--- a/app/views/static_pages/_ranking.html.haml
+++ b/app/views/static_pages/_ranking.html.haml
@@ -8,6 +8,11 @@
 
   #player-list
     = render 'players'
+  %hr
+  #logos
+    = link_to image_tag('shellyLogo.png'), 'https://shellycloud.com/', target: '_blank'
+    = link_to image_tag('craftyLogo.png'), 'http://craftyjs.com/', target: '_blank'
+    = link_to image_tag('lapkaZiele.png'), 'http://dobreziele.pl/', target: '_blank'
 
 
 
