--- a/app/assets/stylesheets/ranking.css.scss
+++ b/app/assets/stylesheets/ranking.css.scss
@@ -86,7 +86,7 @@ $greyColor: #bbbbbb;
     }
 
     .pagination {
-      margin-top:5px;
+      margin:0px 0px 80px 0px !important;
       padding-left: 115px;
       font-size: 18px;
       color: $greyColor;
@@ -120,5 +120,18 @@ $greyColor: #bbbbbb;
       padding-top: 10px;
     }
   }
+
+  hr {
+    margin: 0px 0px 10px 15px;
+  }
+
+  #logos {
+    padding-left: 20px;
+
+    img {
+      padding: 0px 0px 0px 5px;
+    }
+  }
 }
+
 
