added uniq statistics count json and some refactoring

--- a/app/views/admin/panel/statistics.html.haml
+++ b/app/views/admin/panel/statistics.html.haml
@@ -24,6 +24,6 @@
       %td
         {{stat.score}}
       %td
-        {{stat.created_at}}
+        {{stat.created_at_txt}}
       %td
         .btn.btn-sm.btn-danger{'ng-click' => "removeStat(stat.id)", 'confirm-click' => 'Usunąć dane statystyki ?'} Usuń
