added registered users count

--- a/app/views/admin/panel/statistics.html.haml
+++ b/app/views/admin/panel/statistics.html.haml
@@ -1,6 +1,6 @@
 %button.btn.btn-default.btn-sm.reload-btn{'ng-click' => 'reloadData()'}
   Odśwież
-%span#uniqCount Unikalni użytkownicy: {{uniqCount}}
+%span.users-count Unikalni użytkownicy: {{uniqCount}}
 
 %input.form-control{'ng-model'=> 'ipFilter.ip', 'placeholder' => 'Wyklucz ip'}
 %input.form-control{'ng-model'=> 'statFilter', 'placeholder' => 'Szukaj'}
