--- a/app/views/admin/panel/users.html.haml
+++ b/app/views/admin/panel/users.html.haml
@@ -1,4 +1,6 @@
 %button.btn.btn-default.btn-sm.reload-btn{'ng-click' => 'reloadData()'} Odśwież
+%span.users-count Zarejestrowani użytkownicy: {{users.length}}
+
 %input.form-control{'ng-model'=> 'userFilter', 'placeholder' => 'Szukaj'}
 
 %table.table.table-striped
