--- a/app/views/static_pages/_info_modal.html.haml
+++ b/app/views/static_pages/_info_modal.html.haml
@@ -14,7 +14,7 @@
         Mistrzowie Siorbania to elitarna grupa największych Yerbochłonów Polski!
         %ul
           %li zaloguj się przez facebooka aby móc zapisać swój wynik
-          %li sklep Dobre Ziele regularnie funduje atrakcyjną nagrodę dla czołowych yerbochłonów
+          %li sklep Dobre Ziele regularnie funduje atrakcyjne nagrody dla czołowych yerbochłonów
           %li aplikacja nie będzie publikować żadnych informacji na twoim profilu
           %li zapisanie się do Mistrzów Siorbania jest jednoznaczne z subskrypcją Siorbslettera
           %li dzięki niemu będziesz miał dostęp do promocji i konkursów organizowanych przez Dobre Ziele
