--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Siorb - Droga do Rozbudzenia (Yerba Mate Kraków)
+    %title Siorb - Droga do Rozbudzenia (Gra Yerba Mate Kraków)
     %meta{content: "sZ4--LsbNoGYW6P98faBBMim2UyNyZH6j11cCAxXHEo", name: "google-site-verification"}/
     = include_gon
     = stylesheet_link_tag    "application"
