--- a/app/views/static_pages/_ranking.html.haml
+++ b/app/views/static_pages/_ranking.html.haml
@@ -2,9 +2,7 @@
   #user-data
     = render 'flash_messages'
     = render 'user_info'
-  = render 'info_modal'
-
-
+  = render 'info_modals'
 
   #player-list
     = render 'players'
