--- a/app/views/static_pages/_info_modals.html.haml
+++ b/app/views/static_pages/_info_modals.html.haml
@@ -1,8 +1,10 @@
-#infoModal-heading
+#modals-heading
   %span.heading
     = image_tag('rankingHeading.png')
-  #infoModal-btn{"data-target" => "#infoModal", "data-toggle" => "modal"}
+  %span#infoModal-btn{"data-target" => "#infoModal", "data-toggle" => "modal"}
     .btn.btn-xs.btn-default O co chodzi ?
+  %span#competitionModal-btn{"data-target" => "#competitionModal", "data-toggle" => "modal"}
+    .btn.btn-xs.btn-warning Uwaga konkurs !
 
 #infoModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "myModalLabel", role: "dialog", tabindex: "-1"}
   .modal-dialog
@@ -19,5 +21,20 @@
           %li zapisanie się do Mistrzów Siorbania jest jednoznaczne z subskrypcją Siorbslettera
           %li dzięki niemu będziesz miał dostęp do promocji i konkursów organizowanych przez Dobre Ziele
           %li obiecujemy, że nie będzie spamu i każdej chwili możesz się z niego wypisać
+      .modal-footer
+        %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Zamknij
+
+#competitionModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "myModalLabel", role: "dialog", tabindex: "-1"}
+  .modal-dialog
+    .modal-content
+      .modal-header
+        %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
+        %h3#myModalLabel.modal-title Mistrzowie Siorbania VOL I
+      .modal-body
+        Szczegóły konkursu:
+        %ul
+          %li nagrody
+          %li zasady
+          %li i takie takie
       .modal-footer
         %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Zamknij
