--- a/app/views/static_pages/_info_modals.html.haml
+++ b/app/views/static_pages/_info_modals.html.haml
@@ -3,8 +3,8 @@
     = image_tag('rankingHeading.png')
   %span#infoModal-btn{"data-target" => "#infoModal", "data-toggle" => "modal"}
     .btn.btn-xs.btn-default O co chodzi ?
-  %span#competitionModal-btn{"data-target" => "#competitionModal", "data-toggle" => "modal"}
-    .btn.btn-xs.btn-warning Uwaga konkurs !
+  // %span#competitionModal-btn{"data-target" => "#competitionModal", "data-toggle" => "modal"}
+  //   .btn.btn-xs.btn-warning Uwaga konkurs !
 
 #infoModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "myModalLabel", role: "dialog", tabindex: "-1"}
   .modal-dialog
