--- a/app/views/static_pages/_info_modals.html.haml
+++ b/app/views/static_pages/_info_modals.html.haml
@@ -55,7 +55,7 @@
 
         %strong UWAGA!
         %p
-          Pomóż Panu Siorbowi przejąć władzę nad internetem! :) Zaproś znajomych do gry,
+          Pomóż Panu Siorbowi przejąć władzę nad internetami! :) Zaproś znajomych do gry,
           %strong udostępnij info
           przy pomocy przycisku z lewego dolnego rogu menu głównego.
         Także, klawiatura w dłoń, łyk yerby i...
