--- a/app/views/static_pages/_info_modals.html.haml
+++ b/app/views/static_pages/_info_modals.html.haml
@@ -53,13 +53,20 @@
           Wśród wszystkich zarejestrowanych, aktywnych graczy rozlosujemy 10 bonów o wartości 15zł do zrealizowania na
           %a{'href'=>'http://www.dobreziele.pl', 'target'=>'_blank'} www.dobreziele.pl
 
-        %strong UWAGA!
         %p
-          Pomóż Panu Siorbowi przejąć władzę nad internetami! :) Zaproś znajomych do gry,
-          %strong udostępnij info
-          przy pomocy przycisku z lewego dolnego rogu menu głównego.
-        Także, klawiatura w dłoń, łyk yerby i...
-        %strong Jedzieeeemy!
+          Także, klawiatura w dłoń, łyk yerby i...
+          %strong Jedzieeeemy!
+
+        .disclaimer
+          %strong UWAGA:
+          %p
+            Pomóż Panu Siorbowi przejąć władzę nad internetami! :) Zaproś znajomych do gry,
+            %strong udostępnij info
+            przy pomocy przycisku z lewego dolnego rogu menu głównego.
+
+        .disclaimer
+          %strong UWAGA 2:
+          %p Do rankingu Mistrzów Siorbania zostaną zapisane tylko te wyniki, które zostały osiągnięte po zalogowaniu. Ze względu na bezpieczeństwo danych i wszechświata, punkty zdobyte przed zalogowaniem, po utworzeniu konta ulegną wyzerowaniu.
 
         = image_tag('prizes1.jpg')
 
