guaranina is not strong

--- a/app/views/static_pages/_info_modals.html.haml
+++ b/app/views/static_pages/_info_modals.html.haml
@@ -36,10 +36,7 @@
           Do 5.05
           = link_to "zaloguj się przez Facebooka.", "/auth/facebook", id: "sign_in"
           Aplikacja nie udostępni żadnych informacji na twoim profilu - tak, my też tego nie lubimy...
-        %p
-          Zawalcz o miejsce w czołówce wirtualnych Yerbochłonów. Do graczy z 5ciu pierwszych miejsc pojadą naczynka, rurki,
-          %strong guaranina
-          i oczywiście najlepsze ziele Yerba Mate!
+        %p Zawalcz o miejsce w czołówce wirtualnych Yerbochłonów. Do graczy z 5ciu pierwszych miejsc pojadą naczynka, rurki, guaranina i oczywiście najlepsze ziele Yerba Mate!
         %strong Do zdobycia:
         %ol
           %li
