add best score info

--- a/app/views/static_pages/_user_info.html.haml
+++ b/app/views/static_pages/_user_info.html.haml
@@ -4,3 +4,6 @@
   .place-in-ranking
     Twoje miejsce w rankingu:
     = current_user.place_in_ranking
+  .best-score
+    Twój rekord:
+    = current_user.best_score
