show share it button sometimes

--- a/app/views/admin/panel/users.html.haml
+++ b/app/views/admin/panel/users.html.haml
@@ -43,4 +43,4 @@
       %td
         {{user.updated_at_txt}}
       %td
-        .btn.btn-sm.btn-danger{'ng-click' => "removeUser(user.id)", 'confirm-click' => 'Usunąć dane użytkownika?'} Usuń z bazy
+        .btn.btn-sm.btn-danger{'ng-click' => "removeUser(user.id)", 'confirm-click' => 'Usunąć dane użytkownika?'} Usuń
