--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -6,7 +6,8 @@
 
   .row
     .col-lg-6
-
+      .share-image
+        = image_tag 'shareIt.png'
     #contact-message.col-lg-6
       =render 'contact_message_form'
 #ranking-wrapper.col-lg-4.nopadding
