share button stuff

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -6,6 +6,8 @@
 
   .row
     .col-lg-6
+      .share-button
+        = image_tag 'fbShareButton.png'
       .share-image
         = image_tag 'shareIt.png'
     #contact-message.col-lg-6
