--- a/app/assets/stylesheets/blame.css.scss
+++ b/app/assets/stylesheets/blame.css.scss
@@ -29,3 +29,10 @@
     padding-bottom: 5px !important;
   }
 }
+
+//share button overflowing the game
+.share-button {
+  position: absolute;
+  left: 20px;
+  top: -30px;
+}
