added shares count to admin panel

--- a/app/views/admin/panel/statistics.html.haml
+++ b/app/views/admin/panel/statistics.html.haml
@@ -1,6 +1,7 @@
 %button.btn.btn-default.btn-sm.reload-btn{'ng-click' => 'reloadData()'}
   Odśwież
 %span.users-count Unikalni użytkownicy: {{uniqCount}}
+%span.shares-count Udostępnienia: {{sharesCount}}
 
 %input.form-control{'ng-model'=> 'ipFilter.ip', 'placeholder' => 'Wyklucz ip'}
 %input.form-control{'ng-model'=> 'statFilter', 'placeholder' => 'Szukaj'}
