--- a/app/views/admin/panel/users.html.haml
+++ b/app/views/admin/panel/users.html.haml
@@ -26,7 +26,7 @@
   %tbody
     %tr{'ng-repeat' => 'user in users | orderBy:order.attr:order.reverse |  filter:userFilter'}
       %td.image-cell
-        %a{'facebook-link' => 'user.fb_nickname'}
+        %a{'facebook-link' => '{{user.fb_nickname}}'}
           %img{'ng-src' => "{{user.image_url}}", 'alt' => ''}
       %td
         {{user.name}}
