--- a/app/views/static_pages/_info_modals.html.haml
+++ b/app/views/static_pages/_info_modals.html.haml
@@ -27,7 +27,7 @@
     .modal-content
       .modal-header
         %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
-        %h3#myModalLabel.modal-title Wejdź do gry i zostań Mistrzem Siorbania!
+        %h3#myModalLabel.modal-title Wyniki
       .modal-body
 
         = image_tag('podiumVol1.jpg')
