--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -7,7 +7,7 @@
   .row
     .col-lg-6
       .share-button
-        = image_tag 'fbShareButton.png'
+        = render 'pimp_my_siorb'
       .share-image
         = image_tag 'shareIt.png'
     #contact-message.col-lg-6
