--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -6,11 +6,8 @@
 
   .row
     .col-lg-6
-      .share-button
-        = render 'pimp_my_siorb'
-      .share-image
-        = image_tag 'shareIt.png'
+      #pimpMySiorb
     #contact-message.col-lg-6
-      =render 'contact_message_form'
+      = render 'contact_message_form'
 #ranking-wrapper.col-lg-4.nopadding
   = render 'ranking'
