--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -66,6 +66,14 @@ body {
   #pimpingOff {
     opacity: 0.6;
   }
+
+  #pimpingOn {
+    opacity: 0.9;
+  }
+
+  #pimpingOn:hover {
+    opacity: 1;
+  }
 }
 
 #sharingModal {
