change share desc

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -77,6 +77,10 @@ body {
 }
 
 #sharingModal {
+  .btn {
+    font-size: 18px !important;
+    margin-left: 5px;
+  }
   font-size: 18px;
 
   img {
