--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -5,5 +5,6 @@
     = include_gon
     = javascript_include_tag "admin/application"
     = csrf_meta_tags
+    = favicon_link_tag
   %body
     = yield
