--- a/app/views/admin/panel/statistics.html.haml
+++ b/app/views/admin/panel/statistics.html.haml
@@ -11,6 +11,8 @@
     %tr
       %th{'ng-click' => "order.setAttr('ip')" }
         .btn.btn-sm.btn-default Adres ip
+      %th{'ng-click' => "order.setAttr('attempts')" }
+        .btn.btn-sm.btn-default Podejścia
       %th{'ng-click' => "order.setAttr('city')" }
         .btn.btn-sm.btn-default Miasto
       %th{'ng-click' => "order.setAttr('duration')" }
@@ -24,6 +26,8 @@
     %tr{'ng-repeat' => "stat in statistics | filter:statFilter | excludeIp:ipFilter | orderBy:order.attr:order.reverse" }
       %td
         {{stat.ip}}
+      %td
+        {{stat.attempts}}
       %td
         {{stat.city}}
       %td
