--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,50 +1,48 @@
 /* Crafty styling */
-
 #game {
-  background-image: url('http://siorb.dobreziele.pl/assets/images/gameplayBg.jpg');
-}
+  background-image: url("http://siorb-staging.shellyapp.com/assets/images/gameplayBg.jpg"); }
 
 .Platform {
-  background-image: url('http://siorb.dobreziele.pl/assets/images/platform.png');
-  background-repeat:repeat-x;
-}
+  background-repeat: repeat-x; }
+
+.level1 {
+  background-image: url("http://siorb-staging.shellyapp.com/assets/images/platform1.png"); }
+
+.level2 {
+  background-image: url("http://siorb-staging.shellyapp.com/assets/images/platform2.png"); }
+
+.level3 {
+  background-image: url("http://siorb-staging.shellyapp.com/assets/images/platform3.png"); }
+
+.level4 {
+  background-image: url("http://siorb-staging.shellyapp.com/assets/images/platform4.png"); }
 
 .fb-share-button {
-  margin-top: 360px;
-}
+  margin-top: 360px; }
 
 /* Crafty styling end */
-
 .shelly-logo {
-  padding-top: 5px;
-}
+  padding-top: 5px; }
 
 /* jcarousel styles */
-
 .jcarousel {
   position: relative;
   overflow: hidden;
   width: 431px;
-  height: 287px;
-}
+  height: 287px; }
 
 .jcarousel ul {
   width: 20000em;
   position: relative;
   list-style: none;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 .jcarousel li {
-  float: left;
-}
+  float: left; }
 
 .inactive {
   display: none !important;
-  visibility: none !important;
-}
+  visibility: none !important; }
 
 /* jcarousel styles end */
-
-
