--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -17,6 +17,18 @@
 .level4 {
   background-image: url("http://siorb-staging.shellyapp.com/assets/images/platform4.png"); }
 
+.level5 {
+  background-image: url("http://siorb-staging.shellyapp.com/assets/images/platform4.png"); }
+
+.level6 {
+  background-image: url("http://siorb-staging.shellyapp.com/assets/images/platform4.png"); }
+
+.level7 {
+  background-image: url("http://siorb-staging.shellyapp.com/assets/images/platform4.png"); }
+
+.level8 {
+  background-image: url("http://siorb-staging.shellyapp.com/assets/images/platform4.png"); }
+
 .fb-share-button {
   margin-top: 360px; }
 
