--- a/app/views/layouts/application.html+mobile.haml
+++ b/app/views/layouts/application.html+mobile.haml
@@ -7,6 +7,7 @@
     = favicon_link_tag
     = csrf_meta_tags
   %body
-    hello mobile
+    = image_tag 'siorbSolo.png'
+    %p Wróć tu na komputerze !
 
   = render 'analytics'
