--- a/app/views/layouts/application.html+mobile.haml
+++ b/app/views/layouts/application.html+mobile.haml
@@ -3,6 +3,8 @@
   %head
     %title Siorb - Droga do Rozbudzenia (Gra Yerba Mate Kraków)
     %meta{content: "sZ4--LsbNoGYW6P98faBBMim2UyNyZH6j11cCAxXHEo", name: "google-site-verification"}/
+    %meta{content: "width=device-width, user-scalable=no", name: "viewport"}/
+
     = stylesheet_link_tag "mobile/application"
     = favicon_link_tag
     = csrf_meta_tags
