--- a/app/views/static_pages/_info_modals.html.haml
+++ b/app/views/static_pages/_info_modals.html.haml
@@ -47,6 +47,11 @@
             III miejsce - 2 x 0,5kg Yerba Mate
 
         %p
+          Dodatkowo zapisz się na
+          = link_to "wydarzenie na FB", "http://tinyurl.com/lyhd2c4", target: '_blank'
+          , aby być na bieżąco i zgarniać dodatkowe nagrody:
+
+        %p
           %strong *WAŻNE:
           Do rankingu Mistrzów Siorbania zostaną zapisane tylko te wyniki, które zostały osiągnięte po zalogowaniu. Ze względu na bezpieczeństwo danych i wszechświata, punkty zdobyte przed zalogowaniem, po utworzeniu konta ulegną wyzerowaniu.
 
