--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -7,6 +7,7 @@
 
   .row
     .col-lg-6
+      = link_to image_tag('mushroomsAd.png'), 'http://mushrooms.shellyapp.com/', class: 'js-mushrooms-ad', title: 'Grałeś już w grzyby?'
     #contact-message.col-lg-6
       = render 'contact_message_form'
 #ranking-wrapper.col-lg-4.nopadding
