--- a/app/assets/stylesheets/ranking.css.scss
+++ b/app/assets/stylesheets/ranking.css.scss
@@ -3,7 +3,7 @@ $greyColor: #bbbbbb;
 #ranking {
   padding: 10px 0px 20px 30px;
   font-size: 16px;
-  background-image:url('rankingBg.png');
+  background-image: image-url('rankingBg.png');
   background-repeat: no-repeat;
   background-position:150px 115px;
 
@@ -52,7 +52,7 @@ $greyColor: #bbbbbb;
         text-decoration: none;
       }
       .sign-in-field {
-        background-image:url('fbIcon.png');
+        background-image: image-url('fbIcon.png');
         background-repeat: no-repeat;
         background-position:76px -5px;
         width: 380px;
