add stuff for displaying comments and some minor fixes

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -6,7 +6,8 @@
   #pimpMySiorb
 
   .row
-    .col-lg-6
+    #comment-box.col-lg-6
+      = render 'comments_box'
     #contact-message.col-lg-6
       = render 'contact_message_form'
 #ranking-wrapper.col-lg-4.nopadding
