--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,8 +6,8 @@
     %meta{property: "og:title", content: "#{@title}"}/
     %meta{property: "og:description", content: "#{@description}" }/
     %meta{name: "description", content: "#{@description}" }/
-    %meta{name: "og:image", content: "http://siorb.dobreziele.pl/siorbIcon200.png" }/
-    %meta{name: "twitter:image", content: "http://siorb.dobreziele.pl/siorbIcon200.png" }/
+    %meta{name: "og:image", content: "https://siorb.dobreziele.pl/siorbIcon200.png" }/
+    %meta{name: "twitter:image", content: "https://siorb.dobreziele.pl/siorbIcon200.png" }/
     %meta{name: "twitter:card", content: "summary" }/
     %meta{name: "twitter:title", content: "#{@title}" }/
 
