--- a/app/views/static_pages/_facebook_login.html.haml
+++ b/app/views/static_pages/_facebook_login.html.haml
@@ -5,7 +5,7 @@
     = link_to "wyloguj się", signout_path, id: "sign_out", data: { confirm: "Na pewno ?" }
   - else
     .sign-in-field
-      = link_to "Zaloguj się", "/auth/facebook", id: "sign_in", data: { confirm: "Zgadzam się na przetwarzanie moich danych osobowych przez administratora PIWOWAR PAWEŁ Dobre Ziele, ul. Piwna 1, 32-625 Przecieszyn, NIP: 5492308610 w celu korzystania z gry online 'Siorb: droga do rozbudzenia'. Podanie danych jest dobrowolne. Podstawą przetwarzania danych jest moja zgoda. Mam prawo wycofania zgody w dowolnym momencie. Dane osobowe będą przetwarzane do czasu odwołania zgody. Mam prawo żądania od administratora dostępu do moich danych osobowych, ich sprostowania, usunięcia lub ograniczenia przetwarzania, a także prawo wniesienia skargi do organu nadzorczego." }
+      = link_to "Zaloguj się", "/auth/facebook", data: { confirm: "Zgadzam się na przetwarzanie moich danych osobowych przez administratora PIWOWAR PAWEŁ Dobre Ziele, ul. Piwna 1, 32-625 Przecieszyn, NIP: 5492308610 w celu korzystania z gry online 'Siorb: droga do rozbudzenia'. Podanie danych jest dobrowolne. Podstawą przetwarzania danych jest moja zgoda. Mam prawo wycofania zgody w dowolnym momencie. Dane osobowe będą przetwarzane do czasu odwołania zgody. Mam prawo żądania od administratora dostępu do moich danych osobowych, ich sprostowania, usunięcia lub ograniczenia przetwarzania, a także prawo wniesienia skargi do organu nadzorczego." }
       &nbsp;aby dołączyć do Mistrzów Siorbania
 
 
